--- a/src/app/heroes/pages/buscar/buscar.component.html
+++ b/src/app/heroes/pages/buscar/buscar.component.html
@@ -1,1 +1,41 @@
-<p>buscar works!</p>
+
+<h1>buscar</h1>
+
+<div fxLayout="column">
+   <div>
+      <h1>Buscador de Héroes</h1>
+      <mat-divider></mat-divider>
+   </div>
+</div>
+<div fxLayout="column">
+   <h3>Buscador</h3>
+
+   <mat-form-field class="example-full-width" appearance="fill">
+   <mat-label>Buscar</mat-label>
+   <input type="text"
+          placeholder="Buscar"
+          aria-label="Seleccionar"
+          matInput
+          [(ngModel)]="termino"         
+          [matAutocomplete]="auto"
+          (input)="buscando()"          
+         >
+   <mat-autocomplete 
+      autoActiveFirstOption 
+      #auto="matAutocomplete" 
+      (optionSelected)="opcionSeleccionada($event)"
+   >
+     <mat-option *ngFor="let heroe of heroes " [value]="heroe">
+       {{heroe.superhero}}
+     </mat-option>
+     
+     <mat-option [value]="" *ngIf="heroes.length === 0 && termino.trim().length < 0 ">
+       No se encontro nada con el termino {{termino}}
+     </mat-option>
+
+   </mat-autocomplete>
+ </mat-form-field>
+
+ <div> <pre>{{heroeSel | json }}</pre></div>
+
+</div>
