--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,1 +1,97 @@
-<p>agregar works!</p>
+<h1>
+   {{      
+      ( heroe.id ) ? 'Editar' : 'Nuevo'   
+   }} 
+   
+    Heroe <small>{{heroe.superhero}}</small></h1>
+
+<div fxLayout="row" fxLayout.xs="column"  fxLayoutGap="40px"> 
+
+   <div fxFlex="50" fxLayout="column" >
+
+      <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="20px" >
+      
+         <mat-form-field fxFlex="100">
+            <mat-label>Super Héroe </mat-label>
+            <input 
+               matInput 
+               type="text" 
+               required 
+               [(ngModel)]="heroe.superhero"
+            >
+         </mat-form-field>
+   
+         <mat-form-field fxFlex="100">
+            <mat-label>Alter Ego </mat-label>
+            <input 
+            matInput 
+            type="text" 
+            required 
+            [(ngModel)]="heroe.alter_ego"
+         >
+         </mat-form-field>
+         
+      </div>
+      
+
+      <mat-form-field >
+         <mat-label>Primera aparición </mat-label>
+         <input 
+         matInput 
+         type="text" 
+         required 
+         [(ngModel)]="heroe.first_appearance"
+      >
+      </mat-form-field>
+
+      <mat-form-field >
+         <mat-label>Personajes </mat-label>
+         <input 
+         matInput 
+         type="text" 
+         required 
+         [(ngModel)]="heroe.characters"
+      >
+      </mat-form-field>
+
+      <mat-form-field >
+         <mat-label>Creador </mat-label>
+         <mat-select [(ngModel)]="heroe.publisher" required>
+            <mat-option *ngFor="let publisher of publishers"  [value]="publisher.id"> {{publisher.desc}} </mat-option>
+         </mat-select>
+      </mat-form-field>
+
+      <mat-form-field >
+         <mat-label>Imagen Url </mat-label>
+         <input 
+            matInput 
+            type="text" 
+            required 
+            [(ngModel)]="heroe.alt_img"
+         >
+      </mat-form-field>
+
+      <br>
+      <div fxLayout>
+         <button mat-raised-button color="primary" (click)="save()" >
+            <mat-icon>edit</mat-icon>
+            {{      
+               ( heroe.id ) ? 'Actualizar' : 'Crear'   
+            }} 
+            
+         </button>
+         <span class="spacer"></span>
+   
+         <button *ngIf="heroe.id" mat-raised-button color="warn" (click)="remove()" >
+            <mat-icon>remove</mat-icon>
+            borrar
+         </button>
+      </div>
+
+   </div>
+
+
+   <div fxFlex="50">
+      <img [src]="heroe | imagen " alt="">
+   </div>
+</div>
